@@ -190,24 +190,6 @@ name|search
 operator|.
 name|FacetRequest
 operator|.
-name|SortBy
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|facet
-operator|.
-name|search
-operator|.
-name|FacetRequest
-operator|.
 name|SortOrder
 import|;
 end_import
@@ -463,15 +445,6 @@ operator|==
 name|SortOrder
 operator|.
 name|DESCENDING
-operator|&&
-name|fr
-operator|.
-name|getSortBy
-argument_list|()
-operator|==
-name|SortBy
-operator|.
-name|VALUE
 condition|)
 block|{
 name|FacetArraysSource
