@@ -179,7 +179,7 @@ comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more
 end_comment
 
 begin_comment
-comment|/**  * Generates {@link FacetResult} from the {@link FacetArrays} aggregated for a  * particular {@link FacetRequest}. The generated {@link FacetResult} is a  * subtree of the taxonomy tree. Its root node,  * {@link FacetResult#getFacetResultNode()}, is the facet specified by  * {@link FacetRequest#categoryPath}, and the enumerated children,  * {@link FacetResultNode#subResults}, of each node in that {@link FacetResult}  * are the top K ( = {@link FacetRequest#numResults}) among its children in the  * taxonomy. Top in the sense {@link FacetRequest#getSortBy()}, which can be by  * the values aggregated in the count arrays, or by ordinal numbers; also  * specified is the sort order, {@link FacetRequest#getSortOrder()}, ascending  * or descending, of these values or ordinals before their top K are selected.  * The depth (number of levels excluding the root) of the {@link FacetResult}  * tree is specified by {@link FacetRequest#getDepth()}.  *<p>  * Because the number of selected children of each node is restricted, and not  * the overall number of nodes in the {@link FacetResult}, facets not selected  * into {@link FacetResult} might have better values, or ordinals, (typically,  * higher counts), than facets that are selected into the {@link FacetResult}.  *<p>  * The generated {@link FacetResult} also provides with  * {@link FacetResult#getNumValidDescendants()}, which returns the total number  * of facets that are descendants of the root node, no deeper than  * {@link FacetRequest#getDepth()}, and which have valid value. The rootnode  * itself is not counted here. Valid value is determined by the  * {@link FacetResultsHandler}. {@link TopKInEachNodeHandler} defines valid as  * != 0.  *<p>  *<b>NOTE:</b> this code relies on the assumption that  * {@link TaxonomyReader#INVALID_ORDINAL} == -1, a smaller value than any valid  * ordinal.  *   * @lucene.experimental  */
+comment|/**  * Generates {@link FacetResult} from the {@link FacetArrays} aggregated for a  * particular {@link FacetRequest}. The generated {@link FacetResult} is a  * subtree of the taxonomy tree. Its root node,  * {@link FacetResult#getFacetResultNode()}, is the facet specified by  * {@link FacetRequest#categoryPath}, and the enumerated children,  * {@link FacetResultNode#subResults}, of each node in that {@link FacetResult}  * are the top K ( = {@link FacetRequest#numResults}) among its children in the  * taxonomy. The depth (number of levels excluding the root) of the  * {@link FacetResult} tree is specified by {@link FacetRequest#getDepth()}.  *<p>  * Because the number of selected children of each node is restricted, and not  * the overall number of nodes in the {@link FacetResult}, facets not selected  * into {@link FacetResult} might have better values, or ordinals, (typically,  * higher counts), than facets that are selected into the {@link FacetResult}.  *<p>  * The generated {@link FacetResult} also provides with  * {@link FacetResult#getNumValidDescendants()}, which returns the total number  * of facets that are descendants of the root node, no deeper than  * {@link FacetRequest#getDepth()}, and which have valid value. The rootnode  * itself is not counted here. Valid value is determined by the  * {@link FacetResultsHandler}. {@link TopKInEachNodeHandler} defines valid as  * != 0.  *<p>  *<b>NOTE:</b> this code relies on the assumption that  * {@link TaxonomyReader#INVALID_ORDINAL} == -1, a smaller value than any valid  * ordinal.  *   * @lucene.experimental  */
 end_comment
 
 begin_class
@@ -2000,63 +2000,20 @@ operator|.
 name|ASCENDING
 condition|)
 block|{
-switch|switch
-condition|(
-name|facetRequest
-operator|.
-name|getSortBy
-argument_list|()
-condition|)
-block|{
-case|case
-name|VALUE
-case|:
 return|return
 operator|new
 name|AscValueACComparator
 argument_list|()
 return|;
-case|case
-name|ORDINAL
-case|:
-return|return
-operator|new
-name|AscOrdACComparator
-argument_list|()
-return|;
-block|}
 block|}
 else|else
 block|{
-switch|switch
-condition|(
-name|facetRequest
-operator|.
-name|getSortBy
-argument_list|()
-condition|)
-block|{
-case|case
-name|VALUE
-case|:
 return|return
 operator|new
 name|DescValueACComparator
 argument_list|()
 return|;
-case|case
-name|ORDINAL
-case|:
-return|return
-operator|new
-name|DescOrdACComparator
-argument_list|()
-return|;
 block|}
-block|}
-return|return
-literal|null
-return|;
 block|}
 comment|/**    * A comparator of two Aggregated Categories according to the order    * (ascending / descending) and item (ordinal or value) specified in the     * FacetRequest for the FacetResult to be generated    */
 DECL|class|ACComparator
@@ -2194,90 +2151,6 @@ operator|(
 name|val1
 operator|>
 name|val2
-operator|)
-return|;
-block|}
-block|}
-DECL|class|AscOrdACComparator
-specifier|private
-specifier|static
-specifier|final
-class|class
-name|AscOrdACComparator
-extends|extends
-name|ACComparator
-block|{
-DECL|method|AscOrdACComparator
-name|AscOrdACComparator
-parameter_list|()
-block|{ }
-annotation|@
-name|Override
-DECL|method|leftGoesNow
-specifier|protected
-name|boolean
-name|leftGoesNow
-parameter_list|(
-name|int
-name|ord1
-parameter_list|,
-name|double
-name|val1
-parameter_list|,
-name|int
-name|ord2
-parameter_list|,
-name|double
-name|val2
-parameter_list|)
-block|{
-return|return
-operator|(
-name|ord1
-operator|<
-name|ord2
-operator|)
-return|;
-block|}
-block|}
-DECL|class|DescOrdACComparator
-specifier|private
-specifier|static
-specifier|final
-class|class
-name|DescOrdACComparator
-extends|extends
-name|ACComparator
-block|{
-DECL|method|DescOrdACComparator
-name|DescOrdACComparator
-parameter_list|()
-block|{ }
-annotation|@
-name|Override
-DECL|method|leftGoesNow
-specifier|protected
-name|boolean
-name|leftGoesNow
-parameter_list|(
-name|int
-name|ord1
-parameter_list|,
-name|double
-name|val1
-parameter_list|,
-name|int
-name|ord2
-parameter_list|,
-name|double
-name|val2
-parameter_list|)
-block|{
-return|return
-operator|(
-name|ord1
-operator|>
-name|ord2
 operator|)
 return|;
 block|}
