@@ -195,17 +195,6 @@ condition|(
 name|accending
 condition|)
 block|{
-switch|switch
-condition|(
-name|facetRequest
-operator|.
-name|getSortBy
-argument_list|()
-condition|)
-block|{
-case|case
-name|VALUE
-case|:
 return|return
 operator|new
 name|MaxValueHeap
@@ -213,31 +202,9 @@ argument_list|(
 name|nresults
 argument_list|)
 return|;
-case|case
-name|ORDINAL
-case|:
-return|return
-operator|new
-name|MaxOrdinalHeap
-argument_list|(
-name|nresults
-argument_list|)
-return|;
-block|}
 block|}
 else|else
 block|{
-switch|switch
-condition|(
-name|facetRequest
-operator|.
-name|getSortBy
-argument_list|()
-condition|)
-block|{
-case|case
-name|VALUE
-case|:
 return|return
 operator|new
 name|MinValueHeap
@@ -245,27 +212,7 @@ argument_list|(
 name|nresults
 argument_list|)
 return|;
-case|case
-name|ORDINAL
-case|:
-return|return
-operator|new
-name|MinOrdinalHeap
-argument_list|(
-name|nresults
-argument_list|)
-return|;
 block|}
-block|}
-throw|throw
-operator|new
-name|IllegalArgumentException
-argument_list|(
-literal|"none supported facet request: "
-operator|+
-name|facetRequest
-argument_list|)
-throw|;
 block|}
 DECL|class|MinValueHeap
 specifier|private
@@ -452,116 +399,6 @@ return|return
 name|valueCompare
 operator|>
 literal|0
-return|;
-block|}
-block|}
-DECL|class|MinOrdinalHeap
-specifier|private
-specifier|static
-class|class
-name|MinOrdinalHeap
-extends|extends
-name|PriorityQueue
-argument_list|<
-name|FacetResultNode
-argument_list|>
-implements|implements
-name|Heap
-argument_list|<
-name|FacetResultNode
-argument_list|>
-block|{
-DECL|method|MinOrdinalHeap
-specifier|public
-name|MinOrdinalHeap
-parameter_list|(
-name|int
-name|size
-parameter_list|)
-block|{
-name|super
-argument_list|(
-name|size
-argument_list|)
-expr_stmt|;
-block|}
-annotation|@
-name|Override
-DECL|method|lessThan
-specifier|protected
-name|boolean
-name|lessThan
-parameter_list|(
-name|FacetResultNode
-name|arg0
-parameter_list|,
-name|FacetResultNode
-name|arg1
-parameter_list|)
-block|{
-return|return
-name|arg0
-operator|.
-name|ordinal
-operator|<
-name|arg1
-operator|.
-name|ordinal
-return|;
-block|}
-block|}
-DECL|class|MaxOrdinalHeap
-specifier|private
-specifier|static
-class|class
-name|MaxOrdinalHeap
-extends|extends
-name|PriorityQueue
-argument_list|<
-name|FacetResultNode
-argument_list|>
-implements|implements
-name|Heap
-argument_list|<
-name|FacetResultNode
-argument_list|>
-block|{
-DECL|method|MaxOrdinalHeap
-specifier|public
-name|MaxOrdinalHeap
-parameter_list|(
-name|int
-name|size
-parameter_list|)
-block|{
-name|super
-argument_list|(
-name|size
-argument_list|)
-expr_stmt|;
-block|}
-annotation|@
-name|Override
-DECL|method|lessThan
-specifier|protected
-name|boolean
-name|lessThan
-parameter_list|(
-name|FacetResultNode
-name|arg0
-parameter_list|,
-name|FacetResultNode
-name|arg1
-parameter_list|)
-block|{
-return|return
-name|arg0
-operator|.
-name|ordinal
-operator|>
-name|arg1
-operator|.
-name|ordinal
 return|;
 block|}
 block|}
